--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ button.collapsed + div,button.collapsed>:nth-child(3),button.expanded>:nth-child
 					<a class="w3-bar-item w3-button w3-ripple" href="../Calendar.js/index.html">&#9679;&nbsp;Dual Calendar</a>
 					<a class="w3-bar-item w3-button w3-ripple" href="../Datepicker.js/index.html">&#9679;&nbsp;Datepicker</a>
 					<a class="w3-bar-item w3-button w3-ripple" href="../Timepicker.js/index.html">&#9679;&nbsp;Timepicker</a>
+					<a class="w3-bar-item w3-button w3-ripple" href="https://github.com/ZulNs/Kalmustago.js">&#9679;&nbsp;Kode sumber</a>
 				</div>
 			<button class="w3-bar-item w3-button w3-ripple" onclick="closeMenu()">Tutup menu<span class="w3-right">&times;</span></button>
 		</div>
